# obol

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: args.rs  driver.rs  lib.rs  main.rs  printer.rs
src/tests/fixtures/: async.rs
src/translate/: mod.rs  my_gen_args.rs  translate_body.rs  translate_closures.rs  translate_constants.rs  translate_crate.rs  translate_ctx.rs  translate_functions.rs  translate_items.rs  translate_meta.rs  translate_types.rs
tests/: ui.rs
tests/ui/: advanced-const-generics.out  arrays.out  arrays.rs  assert-eq.out  assert-eq.rs  assert-kinds-reconstruct-fallible.out  assert-kinds-reconstruct-fallible.rs  assert-kinds.out  assert-kinds.rs  atomics.out  atomics.rs  bitwise.out  call-to-known-trait-method.out  call-to-known-trait-method.rs  closure-as-fn.out  closure-as-fn.rs  closures.out  closures.rs  closures_with_where.out  closures_with_where.rs  comments.out  const-ptr-into-larger-alloc.out  const-ptr-into-larger-alloc.rs  constants.out  copy_nonoverlapping.out  copy_nonoverlapping.rs  cross_compile_32_bit.out  cross_compile_big_endian.out  demo.out  desugar_drops_to_calls.out  desugar_drops_to_calls.rs  desugar_drops_to_calls_mono.out  desugar_drops_to_calls_mono.rs  disambiguator.out  diverging.out  drop_after_overflow.out  drop_after_overflow.rs  dyn-trait.out  dyn-trait.rs  dyn-with-diamond-supertraits.out  (+116 more)
tests/ui/associated_types/: assoc-constraint-on-assoc-ty-nested.rs  assoc-constraint-on-assoc-ty.2.rs  assoc-constraint-on-assoc-ty.rs  assoc-ty-bound-refers-to-assoc-ty.rs  assoc-ty-via-supertrait-and-bounds.out  assoc-ty-via-supertrait-and-bounds.rs  assoc-type-with-fn-bound.out  assoc-type-with-fn-bound.rs  associated-types.out  associated-types.rs  closure-inside-impl-with-bound-with-assoc-ty.rs  dictionary_passing_style_woes.rs  gat-used-in-method.rs  generic-impl-with-defaulted-method-with-clause-with-assoc-ty.rs  impl-with-dyn-assoc-ty.rs  issue-1036-failed-assoc-ty-lifting.rs  issue-1068-double-visit.out  issue-1068-double-visit.rs  issue-1068-gat-with-assoc-ty.rs  lift-assoc-ty-in-alias.rs  mem-discriminant-from-derive.out  mem-discriminant-from-derive.rs  method-with-assoc-type-constraint.rs  pointee_metadata.out  pointee_metadata.rs  quantified-trait-type-constraint.rs  supertrait-item-bound-has-assoc-ty.out  supertrait-item-bound-has-assoc-ty.rs  try-trait.rs
tests/ui/control-flow/: duplicated-statement.out  empty-loop.out  issue-297-cfg.out  issue-507-cfg.out  issue-899-forward-jump-incorrectly-reconstructed.out  lazy-boolean-op-in-if.out  loop-break.out  loops.out  simple-fallthrough.out  ullbc-control-flow.out  ullbc-control-flow.rs
tests/ui/filtering/: inner-items.rs  match_on_opaque_enum.rs  opacity.rs  start-from-if-exists.rs  start_from.rs  start_from_attribute.rs  start_from_errors.rs  start_from_pub.out  start_from_pub.rs
tests/ui/monomorphization/: adt_proj.out  adt_proj.rs  bound_lifetime.out  bound_lifetime.rs  closure-fn.out  closure-fn.rs  closure-fnonce.out  closure-fnonce.rs  (+45 more)
tests/util/: mod.rs
(+181 files in other folders)
