[package]
name = "obol"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
charon_lib = { package = "charon",  git = "https://github.com/soteria-tools/charon", rev = "a71b958e7127c99ed85cbc520f85a155e38991be" }
# charon_lib = { package = "charon", path = "../charon/charon", default-features = true }
dot-writer = "0.1.4"
anyhow = "1"
log = "0.4.17"
home = "0.5"
clap = { version = "4.0", features = ["derive", "env"] }
itertools = "0.14.0"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.91", features = ["unbounded_depth"] }
toml = "0.9.5"
which = "8.0.0"
rustc_version = "0.4.1"


[[bin]]
name = "obol"
path = "src/bin/obol/main.rs"

[[bin]]
name = "obol-driver"
path = "src/bin/obol-driver/main.rs"

[lib]
name = "obol_lib"
path = "src/lib.rs"

[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private = true
