[package]
name = "obol"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
charon_lib = { package = "charon",  git = "https://github.com/soteria-tools/charon", rev = "d619895d85aafe9f320332730bd3018008d8f7d9" }
# charon_lib = { package = "charon", path = "../charon/charon", default-features = true }
dot-writer = "0.1.4"
anyhow = "1"
log = "0.4.17"
home = "0.5"
clap = { version = "4.0", features = ["derive", "env"] }
itertools = "0.14.0"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.91", features = ["unbounded_depth"] }
toml = "0.9.5"
which = "8.0.0"
rustc_version = "0.4.1"


[[bin]]
name = "obol"
path = "src/bin/obol/main.rs"

[[bin]]
name = "obol-driver"
path = "src/bin/obol-driver/main.rs"

[lib]
name = "obol_lib"
path = "src/lib.rs"

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false

[dev-dependencies]
assert_cmd = "2.2.2"
indoc = "2.0.7"
libtest-mimic = "0.8.2"
regex = "1.12.3"
snapbox = "1.2.1"
strip-ansi-escapes = "0.2.1"
tempfile = "3.27.0"
walkdir = "2.5.0"

[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private = true
